# monitorers

./: .cursorrules  .gitattributes  .gitignore  package-lock.json  package.json
.github/workflows/: rust.yml
.husky/: pre-commit  pre-push
sys-monitor/: Cargo.toml
sys-monitor-tauri/: README.md  package-lock.json  package.json  vite.config.ts
sys-monitor-tauri/src/: App.tsx  styles.css  utils.test.ts  utils.ts
sys-monitor-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
sys-monitor-tauri/src-tauri/capabilities/: default.json
sys-monitor-tauri/src-tauri/src/: collector.rs  hardware.rs  main.rs  pdh.rs  sensor.rs  state.rs
sys-monitor-tauri/src-tauri/src/collector/: cpu.rs  disk.rs  gpu.rs  mod.rs  nvidia.rs
sys-monitor-tauri/src/components/: ErrorBoundary.tsx  HardwareSidebar.tsx  MetricCard.tsx  MetricCardSelector.tsx  SortableCard.tsx  SortableSidebarCard.tsx  TimeRangeSelector.tsx  ViewModeSelector.tsx
sys-monitor-tauri/src/hooks/: useHardwareProfile.ts  useMetrics.test.ts  useMetrics.ts  useSettings.test.ts  useSettings.ts
sys-monitor-tauri/src/types/: metrics.ts
