[package]
name = "sys-monitor-tauri"
version = "0.0.0"
description = "System Monitor — Tauri + React/TypeScript"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
wmi = "0.13"
windows = { version = "0.52", features = [
    "Win32_System_Performance",
    "Win32_Foundation",
] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
