[package]
name = "sys-monitor-tauri"
version = "0.1.4"
description = "System Monitor — Tauri + React/TypeScript"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
wmi = "0.13"
nvapi-sys = { version = "0.1.3", optional = true }
nvml-wrapper = { version = "0.10", optional = true }
windows = { version = "0.52", features = [
    "Win32_System_Performance",
    "Win32_Foundation",
] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
default = ["nvapi", "nvml"]
# Nvidia GPU temperature via NVAPI. Loads nvapi64.dll at runtime (no build-time deps).
nvapi = ["nvapi-sys"]
# Nvidia GPU metrics via NVML (temperature, power, VRAM, fan, clock). Modern replacement for NVAPI.
nvml = ["nvml-wrapper"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
